# Renuka_Venkataramani_final_project

./: .gitattributes  .pre-commit-config.yaml  CITATION  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: final_project.tex  final_project_pres.tex  refs.bib  task_paper.py
src/final_project/: __init__.py  config.py
src/final_project/analysis/: model.py  tables.py  task_analysis.py
src/final_project/data/: AgriDiv_Counties.dbf  counties_shapefile.dbf  data_raw.dta  data_to_construct_variables.dta
src/final_project/data_management/: __init__.py  clean_data.py  data_info.yaml  task_data_management.py  variable_construction.py
src/final_project/final/: __init__.py  plot.py  tables.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: data_info_fixture.yaml  test_clean_data.py  test_data.csv  test_data_management.py
